Fix button contrast error shown by wave extension

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,6 @@ h1 {
     padding-bottom: 2px;
     cursor: pointer;
     font-family: inherit;
-    color: #442ec0;
     font-weight: 600;
 }
 
